--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -53,26 +53,26 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-app-plus": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-h5": "2.0.2-alpha-3081120230718001",
+    "@dcloudio/uni-app": "2.0.2-3080720230703001",
+    "@dcloudio/uni-app-plus": "2.0.2-3080720230703001",
+    "@dcloudio/uni-h5": "2.0.2-3080720230703001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-360": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-stat": "2.0.2-alpha-3081120230718001",
+    "@dcloudio/uni-i18n": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-360": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-jd": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-lark": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-qq": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-vue": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-3080720230703001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-3080720230703001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-3080720230703001",
+    "@dcloudio/uni-stacktracey": "2.0.2-3080720230703001",
+    "@dcloudio/uni-stat": "2.0.2-3080720230703001",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.29.1",
     "flyio": "^0.6.2",
@@ -83,36 +83,36 @@
     "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-typescript": "^7.2.0",
-    "@babel/runtime": "~7.21.0",
-    "@dcloudio/types": "^3.2.11",
-    "@dcloudio/uni-automator": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-migration": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3081120230718001",
+    "@babel/plugin-syntax-typescript": "^7.22.5",
+    "@babel/runtime": "~7.22.10",
+    "@dcloudio/types": "^3.3.3",
+    "@dcloudio/uni-automator": "2.0.2-3080720230703001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-3080720230703001",
+    "@dcloudio/uni-cli-shared": "2.0.2-3080720230703001",
+    "@dcloudio/uni-migration": "2.0.2-3080720230703001",
+    "@dcloudio/uni-template-compiler": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3080720230703001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3080720230703001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3080720230703001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
-    "mini-css-extract-plugin": "^2.7.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.9.0",
+    "miniprogram-api-typings": "3.11.0",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.59.2",
+    "sass": "^1.65.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^1.2.7",
+    "tailwindcss-patch": "^2.0.4",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
