--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -51,49 +51,49 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-app-plus": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-h5": "2.0.2-alpha-3081120230718001",
+    "@dcloudio/uni-app": "2.0.2-3080720230703001",
+    "@dcloudio/uni-app-plus": "2.0.2-3080720230703001",
+    "@dcloudio/uni-h5": "2.0.2-3080720230703001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-360": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-stat": "2.0.2-alpha-3081120230718001",
-    "@vant/weapp": "^1.10.21",
+    "@dcloudio/uni-i18n": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-360": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-jd": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-lark": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-qq": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-vue": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-3080720230703001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-3080720230703001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-3080720230703001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-3080720230703001",
+    "@dcloudio/uni-stacktracey": "2.0.2-3080720230703001",
+    "@dcloudio/uni-stat": "2.0.2-3080720230703001",
+    "@vant/weapp": "^1.10.23",
     "@vue/shared": "^3.0.0",
-    "core-js": "^3.31.1",
+    "core-js": "^3.32.0",
     "flyio": "^0.6.2",
-    "regenerator-runtime": "^0.13.11",
+    "regenerator-runtime": "^0.14.0",
     "uview-ui": "2.0.36",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.22.5",
-    "@babel/runtime": "~7.22.6",
+    "@babel/runtime": "~7.22.10",
     "@dcloudio/types": "3.3.3",
-    "@dcloudio/uni-automator": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-migration": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3081120230718001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3081120230718001",
+    "@dcloudio/uni-automator": "2.0.2-3080720230703001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-3080720230703001",
+    "@dcloudio/uni-cli-shared": "2.0.2-3080720230703001",
+    "@dcloudio/uni-migration": "2.0.2-3080720230703001",
+    "@dcloudio/uni-template-compiler": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3080720230703001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3080720230703001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3080720230703001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3080720230703001",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
@@ -102,17 +102,17 @@
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.10.0",
+    "miniprogram-api-typings": "3.11.0",
     "postcss": "8.4.27",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.64.1",
+    "sass": "^1.65.1",
     "sass-loader": "13.3.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^1.2.7",
+    "tailwindcss-patch": "^2.0.4",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.1.6",
     "vue-template-compiler": "^2.6.11",
