--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "execa": "^7.2.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
