--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -78,13 +78,13 @@
     "stylelint": "15.10.2",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.1.0",
+    "tailwindcss-patch": "^2.1.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "~5.1.6",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.8.1-beta.0",
     "webpack": "^5.88.2",
     "webpack-chain": "^6.5.1"
   },
