--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -114,13 +114,13 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.1.0",
+    "tailwindcss-patch": "^2.1.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.1.6",
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.0"
+    "weapp-tailwindcss-webpack-plugin": "^2.8.1-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
