--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.8.0",
+  "version": "2.8.1-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -172,7 +172,7 @@
     "@vitest/coverage-v8": "^0.34.2",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
-    "bumpp": "^9.1.1",
+    "bumpp": "^9.2.0",
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
@@ -190,7 +190,7 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "html-loader": "^4.2.0",
-    "jest": "^29.6.2",
+    "jest": "^29.6.3",
     "js-beautify": "^1.14.9",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
@@ -232,7 +232,7 @@
     "@weapp-core/regex": "^1.0.0",
     "htmlparser2": "^9.0.0",
     "loader-utils": "^2.0.3",
-    "magic-string": "^0.30.2",
+    "magic-string": "^0.30.3",
     "micromatch": "^4.0.5",
     "postcss": "8.4.28",
     "postcss-selector-parser": "^6.0.13",
