--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -66,6 +66,7 @@
     "babel-preset-taro": "3.6.14",
     "create-functional-loader": "^0.1.0",
     "cross-env": "^7.0.3",
+    "daisyui": "^3.6.3",
     "eslint": "^8.48.0",
     "eslint-config-taro": "3.6.14",
     "eslint-plugin-import": "^2.28.1",
