--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -70,6 +70,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.3",
     "miniprogram-api-typings": "^3.12.0",
     "postcss": "^8.4.28",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
