--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -120,7 +120,7 @@
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.8.2-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
