--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "ge",
   "scripts": {
-    "dev": "npm run dev:weapp",
+    "dev": "cross-env DEBUG=weapp-tw npm run dev:weapp",
     "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
     "dev:write": "cross-env WRITE=1 npm run dev:weapp",
     "build": "npm run build:weapp",
@@ -79,13 +79,13 @@
     "stylelint": "15.10.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.1.1",
+    "tailwindcss-patch": "^2.2.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "~5.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.4",
+    "weapp-tailwindcss-webpack-plugin": "^2.9.0-beta.0",
     "webpack": "^5.88.2",
     "webpack-chain": "^6.5.1"
   },
