--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -84,6 +84,6 @@
     "vite": "4.1.4",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.9.0-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.9.0"
   }
 }
