--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.9.0",
+  "version": "2.9.1-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -165,6 +165,7 @@
     "@types/klaw": "^3.0.4",
     "@types/loader-utils": "^2.0.4",
     "@types/lodash": "^4.14.198",
+    "@types/md5": "^2.3.2",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.6.2",
     "@types/semver": "^7.5.2",
@@ -239,6 +240,7 @@
     "loader-utils": "^2.0.3",
     "lru-cache": "^10.0.1",
     "magic-string": "^0.30.3",
+    "md5": "^2.3.0",
     "micromatch": "^4.0.5",
     "postcss": "8.4.29",
     "postcss-selector-parser": "^6.0.13",
