--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env WATCH=1 gulp",
+    "dev:tt": "cross-env WATCH=1 PLATFORM=tt gulp",
     "dev:local": "cross-env WATCH=1 LOCAL=1 gulp",
     "build:local": "cross-env LOCAL=1 gulp",
     "build": "gulp",
+    "build:tt": "cross-env PLATFORM=tt gulp",
     "prepare": "weapp-tw patch",
     "open": "weapp open -p"
   },
@@ -24,7 +26,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@icebreakers/eslint-config-ts": "^1.2.2",
+    "@icebreakers/eslint-config-ts": "^1.2.3",
     "@types/gulp": "^4.0.17",
     "@types/gulp-debug": "^2.0.36",
     "@types/gulp-if": "^3.0.4",
@@ -34,11 +36,11 @@
     "@types/gulp-replace": "^1.1.0",
     "@types/gulp-sass": "^5.0.4",
     "@types/gulp-util": "^3.0.41",
-    "@types/node": "^20.9.5",
+    "@types/node": "^20.10.6",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
-    "eslint": "^8.54.0",
+    "eslint": "^8.56.0",
     "gulp": "^4.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^4.0.0",
@@ -53,24 +55,24 @@
     "gulp-sftp": "^0.1.5",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-util": "^3.0.8",
-    "miniprogram-api-typings": "^3.12.1",
-    "postcss": "^8.4.31",
-    "postcss-pxtransform": "^3.6.19",
+    "miniprogram-api-typings": "^3.12.2",
+    "postcss": "^8.4.32",
+    "postcss-pxtransform": "^3.6.22",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.7",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.0",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.0.4"
   },
   "dependencies": {
-    "@vant/weapp": "^1.11.1"
+    "@vant/weapp": "^1.11.2"
   }
 }
