--- a/package.json
+++ b/package.json
@@ -192,8 +192,8 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@vitest/coverage-v8": "^1.1.1",
-    "@vitest/ui": "^1.1.1",
+    "@vitest/coverage-v8": "^1.1.3",
+    "@vitest/ui": "^1.1.3",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.2.1",
@@ -202,7 +202,7 @@
     "css-loader": "^6.8.1",
     "css-to-tailwindcss-plugin": "^0.2.5",
     "dedent": "^1.5.1",
-    "defu": "6.1.3",
+    "defu": "6.1.4",
     "del": "^7.1.0",
     "diff": "^5.1.0",
     "domhandler": "^5.0.3",
@@ -226,20 +226,20 @@
     "postcss-loader": "^7.3.4",
     "prettier": "^3.1.1",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.9.2",
+    "rollup": "^4.9.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.69.7",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.1",
-    "tsd": "^0.30.2",
+    "tsd": "^0.30.3",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.1",
+    "vite": "^5.0.11",
+    "vitest": "^1.1.3",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.89.0",
     "webpack-build-utils": "^0.0.7"
@@ -255,12 +255,12 @@
     "@weapp-core/escape": "^2.0.0",
     "@weapp-core/regex": "^1.0.1",
     "debug": "^4.3.4",
-    "htmlparser2": "^9.0.0",
+    "htmlparser2": "9.0.0",
     "loader-utils": "^2.0.3",
     "lru-cache": "^10.1.0",
     "magic-string": "^0.30.5",
     "md5": "^2.3.0",
-    "postcss": "8.4.32",
+    "postcss": "8.4.33",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-selector-parser": "^6.0.15",
     "semver": "^7.5.4",
