--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -56,6 +56,7 @@
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
     "eventemitter3": "^4.0.7",
+    "htmlparser2": "^9.1.0",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
     "uview-plus": "^3.1.39",
