--- a/plugins/transform/package.json
+++ b/plugins/transform/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@weapp-tailwindcss/typography",
+  "name": "@weapp-tailwindcss/x",
   "description": "The typography of weapp-tailwindcss",
   "version": "0.0.0",
   "scripts": {
@@ -43,9 +43,11 @@
     }
   },
   "dependencies": {
+    "htmlparser2": "^9.1.0",
     "lodash.castarray": "^4.4.0",
     "lodash.isplainobject": "^4.0.6",
     "lodash.merge": "^4.6.2",
+    "magic-string": "^0.30.5",
     "postcss-selector-parser": "^6.0.15"
   },
   "author": "SonOfMagic <qq1324318532@gmail.com>",
