--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -39,23 +39,25 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3090620231104002",
-    "@dcloudio/uni-app-plus": "3.0.0-3090620231104002",
-    "@dcloudio/uni-components": "3.0.0-3090620231104002",
-    "@dcloudio/uni-h5": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-jd": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-lark": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-qq": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3090620231104002",
-    "@dcloudio/uni-mp-xhs": "3.0.0-3090620231104002",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3090620231104002",
+    "@dcloudio/uni-app": "3.0.0-3090920231225001",
+    "@dcloudio/uni-app-plus": "3.0.0-3090920231225001",
+    "@dcloudio/uni-components": "3.0.0-3090920231225001",
+    "@dcloudio/uni-h5": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3090920231225001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-3090920231225001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3090920231225001",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
     "eventemitter3": "^4.0.7",
+    "htmlparser2": "^9.1.0",
+    "magic-string": "^0.30.5",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
     "uview-plus": "^3.1.39",
@@ -66,11 +68,13 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "3.0.0-3090620231104002",
-    "@dcloudio/uni-cli-shared": "3.0.0-3090620231104002",
-    "@dcloudio/uni-stacktracey": "3.0.0-3090620231104002",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3090620231104002",
+    "@dcloudio/uni-automator": "3.0.0-3090920231225001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3090920231225001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3090920231225001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3090920231225001",
+    "@tailwindcss/typography": "^0.5.10",
     "@vue/runtime-core": "^3.2.45",
+    "@weapp-tailwindcss/typography": "^0.0.1",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.6.3",
     "miniprogram-api-typings": "^3.12.1",
