--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -70,7 +70,7 @@
     "typescript": "^5.3.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.8"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.9-beta.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.2"
