--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -64,13 +64,13 @@
     "sass": "^1.69.7",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-patch": "^2.2.2",
+    "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.9"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.10-beta.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.2"
