--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -79,13 +79,13 @@
     "stylelint": "16.2.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-patch": "^2.2.2",
+    "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.3.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.9",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.10-beta.0",
     "webpack": "^5.90.1",
     "webpack-chain": "^6.5.1"
   },
