--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -16,10 +16,10 @@
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss-patch": "^2.2.2",
+    "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.9"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.10-beta.0"
   }
 }
