--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -90,7 +90,7 @@
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.10-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.10",
     "webpack": "^5.89.0"
   }
 }
