--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -93,6 +93,6 @@
     "vite": "4.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.10-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.10"
   }
 }
