--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -69,7 +69,7 @@
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.10",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.11-beta.0",
     "webpack": "^5.90.0"
   },
   "browserslist": [
