--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
+    "dev": "cross-env mpx-cli-service serve",
+    "dev:debug": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
     "serve": "mpx-cli-service serve",
     "build": "mpx-cli-service build",
     "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
@@ -14,15 +15,15 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.9.16",
-    "@mpxjs/core": "^2.9.16",
+    "@mpxjs/api-proxy": "^2.9.23",
+    "@mpxjs/core": "^2.9.23",
     "@mpxjs/fetch": "^2.9.1",
     "@mpxjs/pinia": "^2.9.1",
     "@mpxjs/store": "^2.9.9",
     "@mpxjs/utils": "^2.9.1",
     "@vant/weapp": "^1.11.4",
     "pinia": "^2.1.7",
-    "tdesign-miniprogram": "^1.2.7",
+    "tdesign-miniprogram": "^1.2.9",
     "vue": "^2.6.14",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^8.27.2",
@@ -30,47 +31,47 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/runtime-corejs3": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/runtime-corejs3": "^7.24.0",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-cli-service": "^2.1.6",
-    "@mpxjs/mpx-jest": "^0.0.27",
+    "@mpxjs/mpx-cli-service": "^2.1.8",
+    "@mpxjs/mpx-jest": "^0.0.30",
     "@mpxjs/size-report": "^2.9.14",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.1.6",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.6",
-    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.6",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.5",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.6",
-    "@mpxjs/webpack-plugin": "^2.9.16",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.8",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.8",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.8",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.8",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.8",
+    "@mpxjs/webpack-plugin": "^2.9.21",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.33",
-    "postcss-loader": "^8.0.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
-    "stylus": "^0.62.0",
-    "stylus-loader": "^8.0.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "stylus": "^0.63.0",
+    "stylus-loader": "^8.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.0.11",
-    "webpack": "^5.90.0"
+    "webpack": "^5.90.3"
   },
   "browserslist": [
     "ios >= 8",
