--- a/package.json
+++ b/package.json
@@ -183,12 +183,11 @@
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
     "@types/loader-utils": "^2.0.6",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "^4.17.0",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.26",
     "@types/semver": "^7.5.8",
-    "@types/traverse": "^0.6.36",
     "@types/vinyl": "^2.0.11",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
@@ -227,7 +226,7 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.12.1",
+    "rollup": "^4.13.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.71.1",
     "style-loader": "^3.3.4",
@@ -239,7 +238,7 @@
     "typescript": "^5.4.2",
     "typescript-transform-paths": "^3.4.7",
     "vinyl": "^3.0.0",
-    "vite": "^5.1.5",
+    "vite": "^5.1.6",
     "vitest": "^1.3.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3",
@@ -247,12 +246,12 @@
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
+    "@ast-grep/napi": "^0.19.4",
     "@babel/generator": "7.23.6",
     "@babel/parser": "7.24.0",
     "@babel/traverse": "7.24.0",
     "@babel/types": "7.24.0",
     "@csstools/postcss-is-pseudo-class": "4.0.5",
-    "@swc/core": "^1.4.6",
     "@tailwindcss-mangle/shared": "^2.2.2",
     "@weapp-core/escape": "^2.0.0",
     "@weapp-core/regex": "^1.0.1",
@@ -267,7 +266,6 @@
     "postcss-selector-parser": "6.0.15",
     "semver": "7.6.0",
     "tailwindcss-patch": "^2.2.3",
-    "traverse": "^0.6.8",
     "webpack-sources": "3.2.3"
   },
   "packageManager": "pnpm@8.10.2",
