--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -83,7 +83,7 @@
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.11",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0-beta.0",
     "webpack": "^5.90.3"
   }
 }
